--- a/VisualizacaoDados_TP2/index.html
+++ b/VisualizacaoDados_TP2/index.html
@@ -104,6 +104,7 @@ h3{
   <h4>Developed by Carolina S., Gabriela B., Julio G., Thiago O. for course Visualização de Dados 2016/01</h4>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script type="text/javascript" src="../d3tip.js"></script>
+<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script>
 
 var margin = {top: 20, right: 100, bottom: 30, left: 100},
