--- a/VisualizacaoDados_TP3/index.html
+++ b/VisualizacaoDados_TP3/index.html
@@ -114,6 +114,7 @@ h3{
   <h4>Developed by Carolina S., Gabriela B., Julio G., Thiago O. for course Visualização de Dados 2016/01</h4>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script type="text/javascript" src="../d3tip.js"></script>
+<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script>
 
 
