--- a/VisualizacaoDados_TP4/index.html
+++ b/VisualizacaoDados_TP4/index.html
@@ -112,7 +112,7 @@
         </div>
       </div>
       <h3>Data from DataViva about Trade Industry in Belo Horizonte</h3>
-      <h4>Developed by Carolina S., Gabriela B., Julio G., Thiago O. for course Visualização de Dados 2016/01</h4>
+      <h4>Developed by Carolina S., Gabriela B., Julio G., Tiago O. for course Visualização de Dados 2016/01</h4>
       <br>
       <br>
       <br>
